--- a/guake/guake.prefs
+++ b/guake/guake.prefs
@@ -58,14 +58,14 @@ next-tab='<Primary>Page_Down'
 previous-tab='<Primary>Page_Up'
 previous-tab-alt='<Primary><Shift>Tab'
 quit='<Primary><Shift>q'
-search-terminal='<Primary>f'
+search-terminal='<Primary><Shift>f'
 split-tab-horizontal='<Primary><Shift>o'
 split-tab-vertical='<Primary><Shift>percent'
 toggle-hide-on-lose-focus='disabled'
 toggle-transparency='disabled'
 
 [style/background]
-transparency=90
+transparency=91
 
 [style/font]
 allow-bold=true
