--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -1,4 +1,3 @@
-# Get editor completions based on the config schema
 "$schema" = 'https://starship.rs/config-schema.json'
 
 # Inserts a blank line between shell prompts
@@ -12,3 +11,6 @@ add_newline = true
 ssh_only = true
 disabled = false
 style = 'bold yellow'
+
+[directory]
+read_only = "(RO)"
